[tool.poetry]
name = "gx"
version = "2.0.9"
license="Public"
description = "Data Engineering code repository."
authors = ["IoannisNianios <ioannis.nianios@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "5.0.4"

[tool.poetry.dev-dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
